# toydb

./: .gitignore  README.md  justfile  pyproject.toml
toydb/: __init__.py  __main__.py  _utils.py  app.py  cli.py  db.py
toydb/tests/: test_db.py
