[project]
name = "toydb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi[standard]>=0.114.1",
    "platformdirs>=4.3.2",
    "typer>=0.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
toydb = "toydb.cli:app"

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pytest-asyncio>=0.24.0",
    "pytest-benchmark>=4.0.0",
    "pytest>=8.3.3",
    "ruff>=0.6.4",
    "setuptools>=75.1.0",
    "types-aiofiles>=24.1.0.20240626",
]

[tool.mypy]
strict = true
exclude = [
    'toydb/tests'
]
